# jesse-app

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  REPORT.md  SECURITY.md  jesse.example.toml
.github/workflows/: audit.yml  ci.yml
Jesse/Jesse/: AppModelContainer.swift  AttachmentDownscaler.swift  AttachmentThumbnail.swift  BackgroundTasking.swift  BridgeReachability.swift  CameraPicker.swift  CoachHTML.swift  ComposerInput.swift  ComposerLayout.swift  ComposerPaste.swift  ContentView.swift  DietSemantics.swift  DietSnapshot.swift  Explainers.swift  FoodContributions.swift  FoundationHealthClassifier.swift  FoundationHealthInsight.swift  FoundationModelExpander.swift  HealthComponents.swift  HealthContext.swift  HealthContextProvider.swift  HealthDashboardModel.swift  HealthDetailViews.swift  HealthDisplay.swift  HealthHistory.swift  HealthInsight.swift  HealthKitMealWriter.swift  HealthKitWorkoutProvider.swift  HealthRelevanceClassifier.swift  HealthTabView.swift  Info.plist  JesseApp.swift  JesseClient.swift  JesseIntents.swift  JesseSchema.swift  LiveActivityController.swift  Log.swift  MarkdownInline.swift  MarkdownText.swift  Meal.swift  (+36 more)
Jesse/Jesse.xcodeproj/: project.pbxproj
Jesse/JesseCore/: JesseMode.swift
Jesse/JesseMac/: Info.plist  JesseMacApp.swift  MacBridge.swift  MacHealthView.swift  MacJesseClient.swift  MacMarkdown.swift  MacNotifications.swift  MacRootView.swift  MacSettingsView.swift  MacStore.swift  MacThreadDetailView.swift  MacThreadListModel.swift
Jesse/JesseMacTests/: MacAdoptionAndGatingTests.swift  MacClientTests.swift  MacConfigStoreTests.swift  MacFlagSyncTests.swift  MacHealthDashboardTests.swift  MacHydrationTests.swift  MacProvenanceTests.swift  MacSessionSyncTests.swift  MacTestSupport.swift  MacThreadListModelTests.swift  MacThreadSearchTests.swift
Jesse/JesseShared/: ReplyDeduper.swift  SilenceDetector.swift  WatchMessage.swift  WatchTalkModel.swift
Jesse/JesseTests/: AITitleTests.swift  AppModelContainerMigrationTests.swift  AttachmentDownscalerTests.swift  AttachmentTests.swift  AttachmentThumbnailTests.swift  BridgeReachabilityTests.swift  BridgeVersionTests.swift  CameraCaptureTests.swift  CoachHTMLTests.swift  ComposerLayoutTests.swift  ComposerPasteTests.swift  ConfigStoreKeychainTests.swift  ConfigStoreRoundTripTests.swift  DaySummaryTests.swift  DietSemanticsTests.swift  DietSnapshotDecodeTests.swift  DietSnapshotIntegrationTests.swift  DietTargetTests.swift  DrilldownShareTests.swift  FavoritesTests.swift  FolderSummaryTests.swift  FoodContributionsTests.swift  FoundationModelExpanderTests.swift  HealthContextProviderTests.swift  HealthContextTests.swift  HealthDashboardModelTests.swift  HealthDisplayTests.swift  HealthHistoryTests.swift  HealthInsightTests.swift  HealthKitAuthorizationTypesTests.swift  HealthKitWorkoutProviderTests.swift  HealthRelevanceClassifierTests.swift  HealthRetryTests.swift  HealthRingsTests.swift  JesseConfigTests.swift  JesseIntegrationTests.swift  JesseIntentsTests.swift  JesseReplyTests.swift  JesseWireContractTests.swift  LowsTests.swift  (+58 more)
Jesse/JesseWatch/: Info.plist  JesseWatchApp.swift  WatchAudioRecorder.swift  WatchConnectivityClient.swift  WatchContentView.swift  WatchSpeaker.swift
Jesse/JesseWatchTests/: WatchSharedLogicTests.swift
Jesse/JesseWidgets/: JesseTurnActivityAttributes.swift  JesseTurnLiveActivity.swift  JesseWidgetsBundle.swift
JesseKit/: Package.swift
JesseKit/Sources/JesseConversations/: ThreadFolders.swift  ThreadMatching.swift  ThreadOriginFilter.swift  ThreadSectioning.swift
JesseKit/Sources/JesseCore/: FlagSync.swift  JesseMode.swift  JesseSchema.swift  Models.swift
JesseKit/Sources/JesseDietDisplay/: DaySummary.swift  DietSemantics.swift  Explainers.swift  FoodContributions.swift  FoundationHealthInsight.swift  HealthComponents.swift  HealthDashboardModel.swift  HealthDetailViews.swift  HealthDisplay.swift  HealthHistory.swift  HealthInsight.swift  HealthRings.swift  NutrientTrendView.swift  NutrientTrends.swift  PlatformCompat.swift  TodayScreen.swift  WeightTrendView.swift
JesseKit/Sources/JesseNetworking/: BridgeConfig.swift  DietSnapshot.swift  DietSnapshotProviding.swift  HydrationCursorStore.swift  JesseBridgeClient.swift  JesseError.swift  ModelSelection.swift  PendingSessionDeletionStore.swift  Provenance.swift  SSEParser.swift  SessionReconciler.swift  WireTypes.swift
JesseKit/Sources/JesseSearch/: FoundationModelExpander.swift  QueryExpanding.swift  SearchGating.swift  ThreadSearchModel.swift
JesseKit/Tests/JesseConversationsTests/: ArchiveTests.swift  FavoritesTests.swift  FolderSummaryTests.swift  SameTitleDistinctTests.swift  ThreadFoldersTests.swift  ThreadMatchingTests.swift  (+2 more)
bridge/: Cargo.toml  README.md
bridge/src/: apns.rs  attachments.rs  audit.rs  auth.rs  backend_call.rs  badge.rs  bind.rs  breaker.rs  citations.rs  claude.rs  config.rs  context.rs  deletionstore.rs  diet.rs  dietgate.rs  dietlog.rs  dietqueue.rs  directives.rs  emergency.rs  failclass.rs  flagstore.rs  handlers.rs  health.rs  jobstore.rs  lib.rs  main.rs  mealqueue.rs  metrics.rs  modelstore.rs  persona.rs  prompt.rs  queue.rs  ratelimit.rs  sessions.rs  shadow.rs  sse.rs  startup.rs  state.rs  testutil.rs  titlestore.rs  (+4 more)
bridge/src/jobstore/: streams.rs
bridge/tests/: integration.rs  shadow_audit.rs
bridge/tests/common/: mod.rs
bridge/tests/fixtures/: provenance.json
bridge/tests/fixtures/stream/: README.md  empty_result_success.ndjson  error_max_turns.ndjson  missing_result.ndjson  success.ndjson
eval/: Cargo.toml  README.md
eval/src/: assertions.rs  judge.rs  main.rs  mock.rs  runner.rs  suite.rs  transcript.rs
eval/suites/: README.md  diet-v1.json  jesse-v1.json  vaultqa-example.json  vaultqa-v1.json
eval/suites/validation/: README.md  mock-bad-scorecard.md  mock-bad.json  mock-good-scorecard.md  mock-good.json
eval/tests/: integration.rs
eval/vision/: README.md  manifest.json
scripts/: ci-guards.local.sh.example  ci-guards.sh  install-hooks.sh  version-guard.sh
scripts/hooks/: pre-push
(+35 files in other folders)
