[package]
name = "jesse-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.14"
subtle = "2"
# Only the `Stream` trait, to feed axum's SSE response. Already in the lock
# (a transitive dep of axum), so naming it directly pulls no new compiled code.
# The live-stream plumbing itself is tokio::sync::broadcast/mpsc + std.
futures-core = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }   # ServiceExt::oneshot
