[package]
name = "jesse-bridge"
version = "0.7.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# JSON5 parser for the vault's `window.X = <literal>;` diet data files (GET
# /jesse/diet). They are data-only JS literals — unquoted keys, single quotes,
# trailing commas, // comments — not strict JSON, so `serde_json` can't read them.
# json5 handles exactly that superset; we strip the assignment wrapper and parse
# the literal. No hand-rolled JS parsing, no regex quote-rewriting.
json5 = "0.4"
# RFC 4180 CSV reader for the vault's `weight-log.csv` (GET /jesse/diet). Its Notes
# column contains quoted commas, so a naive split(',') corrupts rows — the csv
# crate handles quoting/escaping correctly.
csv = "1"
qrcode = "0.14"
subtle = "2"
# Only the `Stream` trait, to feed axum's SSE response. Already in the lock
# (a transitive dep of axum), so naming it directly pulls no new compiled code.
# The live-stream plumbing itself is tokio::sync::broadcast/mpsc + std.
futures-core = "0.3"
# APNs (optional push, disabled unless JESSE_APNS_* is set) needs an HTTP/2 client
# and ES256 JWT signing — the only justification for these two deps.
#
# reqwest: APNs requires HTTP/2 to api.push.apple.com. rustls-only (no OpenSSL /
# native-tls) keeps the single-static-binary property; webpki-roots bundles the
# Mozilla trust store so there's no OS cert-store dependency. default-features off
# so no native-tls is pulled. Only used by the push path; never on a normal turn.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "http2"] }
# ring: ES256 (ECDSA P-256) signing of the APNs auth JWT. ECDSA_P256_SHA256_FIXED
# emits the raw R||S signature JWS requires. ring is already in the graph (rustls'
# crypto backend), so this adds no new TLS/crypto stack. Used only to sign the JWT.
ring = "0.17"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }   # ServiceExt::oneshot
