[package]
name = "jesse-bridge"
version = "0.22.4"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# JSON5 parser for the vault's `window.X = <literal>;` diet data files (GET
# /jesse/diet). They are data-only JS literals — unquoted keys, single quotes,
# trailing commas, // comments — not strict JSON, so `serde_json` can't read them.
# json5 handles exactly that superset; we strip the assignment wrapper and parse
# the literal. No hand-rolled JS parsing, no regex quote-rewriting.
json5 = "0.4"
# TOML parser for the optional gitignored `jesse.local.toml` persona overlay
# (owner name/pronoun/languages + extra diet vocabulary). Read once at startup,
# layered under the environment; a missing/malformed file soft-fails to the
# generic built-in defaults so a fresh clone needs no config at all.
toml = { version = "0.8", default-features = false, features = ["parse"] }
# RFC 4180 CSV reader for the vault's `weight-log.csv` (GET /jesse/diet). Its Notes
# column contains quoted commas, so a naive split(',') corrupts rows — the csv
# crate handles quoting/escaping correctly.
csv = "1"
qrcode = "0.14"
subtle = "2"
# Only the `Stream` trait, to feed axum's SSE response. Already in the lock
# (a transitive dep of axum), so naming it directly pulls no new compiled code.
# The live-stream plumbing itself is tokio::sync::broadcast/mpsc + std.
futures-core = "0.3"
# APNs (optional push, disabled unless JESSE_APNS_* is set) needs an HTTP/2 client
# and ES256 JWT signing — the only justification for these two deps.
#
# reqwest: APNs requires HTTP/2 to api.push.apple.com. rustls-only (no OpenSSL /
# native-tls) keeps the single-static-binary property; webpki-roots bundles the
# Mozilla trust store so there's no OS cert-store dependency. default-features off
# so no native-tls is pulled. Only used by the push path; never on a normal turn.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "http2"] }
# ring: ES256 (ECDSA P-256) signing of the APNs auth JWT. ECDSA_P256_SHA256_FIXED
# emits the raw R||S signature JWS requires. ring is already in the graph (rustls'
# crypto backend), so this adds no new TLS/crypto stack. Used only to sign the JWT.
ring = "0.17"
# libc: ONE syscall — setpriority(2) — to drop the opt-in shadow-comparison child
# to a background nice value so a mirrored ask never contends for CPU with a live
# phone turn (JESSE_SHADOW_*). Unix-only, best-effort (errors ignored). libc is
# already deep in the graph (tokio/reqwest/ring), so naming it adds no new build.
libc = "0.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }   # ServiceExt::oneshot
