[package]
name = "jesse-eval"
version = "0.1.0"
edition = "2021"
description = "Offline eval harness for the Jesse assistant: runs task suites against a Claude-compatible endpoint and judges candidates against a baseline."

[[bin]]
name = "jesse-eval"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
